fix display on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -28,69 +28,27 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 .map{
-  float: left;
-  position:absolute;
+  /* float: left; */
+  position:fixed;
   top:0;
   bottom:0;
   width:100%;
   height: 100%;
+  z-index: 1;
+  /* height: 90vh;
+  width: 90vw; */
 }
-
-.cont{
-  height: 100vh;
-  width: 100vw;
-  /* position: relative; */
-}
-
-
 
 .cards{ 
-  /* display: "block"; */
-  float: left;
-  /* position: fixed; */
-  z-index: 999;
-  /* padding-top: 50px; */
-  left: 75%;
-  /* right: 0px; */
+  right: 10px;
   top: 10px;
-  width: 24%;
-  /* height: 400px; */
-  /* overflow: auto; */
-  /* float: right; */
-  /* position: absolute; */
-  /* width: 18rem; */
-  /* top: 0px; */
-  /* bottom: 0px; */
-  /* right: 100px; */
-  /* z-index: 999;   */
+  z-index: 999;
 }
+
 .search{ 
-  /* display: "block"; */
-  float: left;
-  /* position: fixed; */
   z-index: 999;
-  /* padding-top: 50px; */
-  left: -18%;
-  /* right: 0px; */
+  left: 50px;
   top: 10px;
-  width: auto;
-  /* height: 400px; */
-  /* overflow: auto; */
-  /* float: right; */
-  /* position: absolute; */
-  /* width: 18rem; */
-  /* top: 0px; */
-  /* bottom: 0px; */
-  /* right: 100px; */
-  /* z-index: 999;   */
 }
